--- a/radio-module.ioc
+++ b/radio-module.ioc
@@ -66,6 +66,8 @@ MxCube.Version=6.7.0
 MxDb.Version=DB.6.0.70
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -125,18 +127,20 @@ PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=RF_CS
 PA8.Locked=true
 PA8.Signal=GPIO_Output
-PA9.GPIOParameters=GPIO_Label
+PA9.GPIOParameters=PinState,GPIO_Label
 PA9.GPIO_Label=RF_RST
 PA9.Locked=true
+PA9.PinState=GPIO_PIN_SET
 PA9.Signal=GPIO_Output
-PB0.GPIOParameters=GPIO_Label
+PB0.GPIOParameters=PinState,GPIO_Label
 PB0.GPIO_Label=ETH_RST
 PB0.Locked=true
+PB0.PinState=GPIO_PIN_SET
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=ETH_INT
 PB1.Locked=true
-PB1.Signal=GPIO_Input
+PB1.Signal=GPXTI1
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=ETH_ACTLED
 PB10.Locked=true
@@ -173,7 +177,7 @@ PB8.Signal=GPIO_Input
 PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=GPS_INT
 PB9.Locked=true
-PB9.Signal=GPIO_Input
+PB9.Signal=GPXTI9
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=ETH_SPDLED
 PC0.Locked=true
@@ -196,9 +200,10 @@ PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=RF_DIO0
 PC12.Locked=true
 PC12.Signal=GPIO_Output
-PC13.GPIOParameters=GPIO_Label
+PC13.GPIOParameters=PinState,GPIO_Label
 PC13.GPIO_Label=GPS_RST
 PC13.Locked=true
+PC13.PinState=GPIO_PIN_SET
 PC13.Signal=GPIO_Output
 PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=ADDR1
@@ -220,9 +225,10 @@ PC6.GPIOParameters=GPIO_Label
 PC6.GPIO_Label=LED1
 PC6.Locked=true
 PC6.Signal=GPIO_Output
-PC7.GPIOParameters=GPIO_Label
+PC7.GPIOParameters=PinState,GPIO_Label
 PC7.GPIO_Label=MEM_RST
 PC7.Locked=true
+PC7.PinState=GPIO_PIN_SET
 PC7.Signal=GPIO_Output
 PC8.GPIOParameters=GPIO_Label
 PC8.GPIO_Label=MEM_CS
@@ -287,6 +293,10 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SPI1.CalculateBaudRate=8.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
