--- a/radio-module.ioc
+++ b/radio-module.ioc
@@ -265,27 +265,30 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=radio-module.ioc
 ProjectManager.ProjectName=radio-module
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true
-RCC.AHBFreq_Value=180000000
+RCC.AHBFreq_Value=16000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=45000000
-RCC.APB1TimFreq_Value=90000000
+RCC.APB1Freq_Value=4000000
+RCC.APB1TimFreq_Value=8000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=90000000
-RCC.APB2TimFreq_Value=180000000
+RCC.APB2Freq_Value=8000000
+RCC.APB2TimFreq_Value=16000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=180000000
-RCC.FCLKCortexFreq_Value=180000000
-RCC.FMPI2C1Freq_Value=45000000
+RCC.CortexFreq_Value=16000000
+RCC.FCLKCortexFreq_Value=16000000
+RCC.FMPI2C1Freq_Value=4000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=180000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
-RCC.MCO2PinFreq_Value=180000000
+RCC.HCLKFreq_Value=16000000
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
+RCC.MCO2PinFreq_Value=16000000
 RCC.PLLCLKFreq_Value=180000000
 RCC.PLLI2SPCLKFreq_Value=96000000
 RCC.PLLI2SQCLKFreq_Value=96000000
@@ -296,13 +299,12 @@ RCC.PLLQCLKFreq_Value=180000000
 RCC.PLLRCLKFreq_Value=180000000
 RCC.PLLSAIPCLKFreq_Value=96000000
 RCC.PLLSAIQCLKFreq_Value=96000000
-RCC.PWRFreq_Value=180000000
+RCC.PWRFreq_Value=16000000
 RCC.SAIAFreq_Value=96000000
 RCC.SAIBFreq_Value=96000000
 RCC.SDIOFreq_Value=180000000
 RCC.SPDIFRXFreq_Value=180000000
-RCC.SYSCLKFreq_VALUE=180000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.SYSCLKFreq_VALUE=16000000
 RCC.USBFreq_Value=180000000
 RCC.VCOI2SInputFreq_Value=1000000
 RCC.VCOI2SOutputFreq_Value=192000000
@@ -314,12 +316,12 @@ SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
-SPI1.CalculateBaudRate=45.0 MBits/s
+SPI1.CalculateBaudRate=4.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.CalculateBaudRate=22.5 MBits/s
+SPI2.CalculateBaudRate=2.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
